# rust_vis1

./: Cargo.toml  README.md  build.sh  index.html
pkg/: rust_vis1.js  rust_vis1_bg.wasm
src/: lib.rs
